--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -17,7 +17,7 @@
             "label": "fresh-build & run",
             "group": "build",
             "type": "shell",
-            "command": "cd ${workspaceFolder} && make fresh-release; cd build/release && ./simple_ros2_test"
+            "command": "cd ${workspaceFolder} && make fresh-release; cd build/release && ./ros2_whisker_slam"
         },
         {
             "label": "build",
@@ -35,7 +35,7 @@
             "label": "build & run",
             "group": "build",
             "type": "shell",
-            "command": "cd ${workspaceFolder} && make release; cd build/release && ./simple_ros2_test"
+            "command": "cd ${workspaceFolder} && make release; cd build/release && ./ros2_whisker_slam"
         }
     ]
 }
