--- a/package.xml
+++ b/package.xml
@@ -13,6 +13,8 @@
 
   <build_depend>rclcpp</build_depend>
   <build_depend>std_msgs</build_depend>
+  <build_depend>interfaces</build_depend>
+  <build_depend>sensor_msgs</build_depend>
 
   <exec_depend>rclcpp</exec_depend>
   <exec_depend>std_msgs</exec_depend>
