--- a/packages/whisker_utils/params/real_lidar_mapper_params_online_async.yaml
+++ b/packages/whisker_utils/params/real_lidar_mapper_params_online_async.yaml
@@ -28,9 +28,9 @@ slam_toolbox:
     debug_logging: true
     throttle_scans: 1
     transform_publish_period: 0.05 #if 0 never publishes odometry
-    map_update_interval: 1.0
-    resolution: 0.05
-    max_laser_range: 0.17 #for rastering images
+    map_update_interval: 5.0
+    resolution: 0.025
+    max_laser_range: 5.0 #for rastering images
     minimum_time_interval: 0.25
     transform_timeout: 0.2
     tf_buffer_duration: 30.0
@@ -38,7 +38,7 @@ slam_toolbox:
     enable_interactive_mode: false
 
     # General Parameters
-    use_scan_matching: false
+    use_scan_matching: true
     use_scan_barycenter: false
     minimum_travel_distance: 0.05
     minimum_travel_heading: 0.05
@@ -54,7 +54,7 @@ slam_toolbox:
     loop_match_minimum_response_fine: 0.45
 
     # Correlation Parameters - Correlation Parameters
-    correlation_search_space_dimension: 50.0
+    correlation_search_space_dimension: 5.0
     correlation_search_space_resolution: 0.01
     correlation_search_space_smear_deviation: 0.1 
 
@@ -64,12 +64,12 @@ slam_toolbox:
     loop_search_space_smear_deviation: 0.03
 
     # Scan Matcher Parameters
-    distance_variance_penalty: 0.0
-    angle_variance_penalty: 0.0
+    distance_variance_penalty: 0.001      
+    angle_variance_penalty: 0.001
 
-    fine_search_angle_offset: 0.00349
-    coarse_search_angle_offset: 0.349
-    coarse_angle_resolution: 0.0349
+    fine_search_angle_offset: 0.00349     
+    coarse_search_angle_offset: 0.349   
+    coarse_angle_resolution: 0.0349        
     minimum_angle_penalty: 0.9
     minimum_distance_penalty: 0.5
-    use_response_expansion: false
+    use_response_expansion: true
