Added launch file

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,8 @@
         "string_view": "cpp",
         "mutex": "cpp",
         "iostream": "cpp"
-    }
+    },
+    "cSpell.words": [
+        "lidar"
+    ]
 }
