--- a/packages/whisker_utils/package.xml
+++ b/packages/whisker_utils/package.xml
@@ -3,15 +3,19 @@
 <package format="3">
   <name>whisker_utils</name>
   <version>0.0.0</version>
-  <description>TODO: Package description</description>
+  <description>Utilities for interacting with a whisker simulation</description>
   <maintainer email="46252182+nonbinary-duck@users.noreply.github.com">villanelle</maintainer>
   <license>MIT</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
+  <depend>interfaces</depend>
+
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
 
+  <exec_depend>ros2launch</exec_depend>
+  
   <export>
     <build_type>ament_cmake</build_type>
   </export>
