--- a/packages/whisker_utils/package.xml
+++ b/packages/whisker_utils/package.xml
@@ -9,12 +9,20 @@
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
+  
+  <depend>rclcpp</depend>
+  <depend>std_msgs</depend>
+  <depend>sensor_msgs</depend>
+  <depend>geometry_msgs</depend>
   <depend>interfaces</depend>
-
+  
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
 
   <exec_depend>ros2launch</exec_depend>
+  <exec_depend>nav2_bringup</exec_depend>
+  <exec_depend>slam_toolbox</exec_depend>
+  <exec_depend>rviz2</exec_depend>
   
   <export>
     <build_type>ament_cmake</build_type>
